--- a/website/package.json
+++ b/website/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "framer-motion": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lorem-ipsum": "^1.4.9",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
